--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projet 1</title>
-</head>
-<body>
-    <h1>Test</h1>
-</body>
+  </head>
+  <body>
+    <header></header>
+    <section class="content">
+      <div><!-- Filtre --></div>
+
+      <div><!-- Hebergement --></div>
+
+      <div><!-- Les plus populaires --></div>
+
+      <div><!-- Activités --></div>
+    </section>
+    <footer></footer>
+  </body>
 </html>
