--- a/index.html
+++ b/index.html
@@ -29,12 +29,25 @@
     <header>
       <img src="./images/logo/Reservia.svg" alt="Logo" />
       <aside class="link-header">
-        <p>Hebergement</p>
-        <p class="activite">Activité</p>
-        <p class="signup">S'inscrire</p>
+        <a class="hebergement-link">Hebergements</a>
+        <a class="activite">Activité</a>
+        <a class="signup">S'inscrire</a>
       </aside>
     </header>
     <main class="content">
+      <h3 style="font-weight: 800">
+        Trouvez votre hébergements pour des vacances de rêve
+      </h3>
+      <p style="font-size: 14px; font-weight: 450">
+        En plein centre ville ou en pleine nature
+      </p>
+      <form class="search">
+        <i></i><input type="text" value="Marseille,France" /><input
+          type="submit"
+          value="Rechercher"
+          class="button"
+        />
+      </form>
       <ul class="filtre">
         <li><p>Filtres</p></li>
         <li>
