--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
           <h3>Filtres</h3>
           <ul class="filter-items">
             <li class="filter-item">
-              <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+              <i class="fa fa-money-bill-wave"></i>
               <p>Economique</p>
             </li>
             <li class="filter-item">
-              <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+              <i class="fa fa-child" aria-hidden="true"></i>
               <p>Familial</p>
             </li>
             <li class="filter-item">
-              <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+              <i class="fa fa-heart" aria-hidden="true"></i>
               <p>Romantique</p>
             </li>
             <li class="filter-item">
-              <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+              <i class="fa fa-dog" aria-hidden="true"></i>
               <p>Animaux autorisé</p>
             </li>
           </ul>
@@ -205,7 +205,7 @@
         <aside class="plus-populaires">
           <header>
             <h2>Les plus populaires</h2>
-            <i></i>
+            <i class="fa fa-chart-line"></i>
           </header>
           <ul class="populaires-list">
             <li class="populaire-item">
