:constrcution: activite marseille

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <section class="activites-marseille">
         <h2>Activités à Marseille</h2>
         <ul class="activites-list">
-          <li class="activite-item">
+          <li class="vieux-port">
             <figure>
               <img
                 src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
@@ -286,7 +286,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="fort">
             <figure>
               <img
                 src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
@@ -296,6 +296,8 @@
                 <p>Fort de Pomègues</p>
               </figcaption>
             </figure>
+          </li>
+          <li class="iles">
             <figure>
               <img
                 src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
@@ -306,7 +308,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="calanques">
             <figure>
               <img
                 src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
@@ -317,7 +319,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="notre-dame">
             <figure>
               <img
                 src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
@@ -327,6 +329,8 @@
                 <p>Notre-Dame-de-la-Garde</p>
               </figcaption>
             </figure>
+          </li>
+          <li class="parc">
             <figure>
               <img
                 src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
@@ -352,15 +356,15 @@
       <article>
         <h4>Nos hébergements</h4>
         <ul>
-          <li><a>Charte qualité</a></li>
-          <li><a>Soumettre votre hôtel</a></li>
+          <li><a href="#">Charte qualité</a></li>
+          <li><a href="#">Soumettre votre hôtel</a></li>
         </ul>
       </article>
       <article>
         <h4>Assistance</h4>
         <ul>
-          <li><a>Centre d'aide</a></li>
-          <li><a>Nous contacter</a></li>
+          <li><a href="#">Centre d'aide</a></li>
+          <li><a href="#">Nous contacter</a></li>
         </ul>
       </article>
     </footer>
