:construction: css grid activité

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <h2>Activités à Marseille</h2>
         <ul class="activites-list">
           <li class="vieux-port">
-            <figure>
+            <!-- <figure>
               <img
                 src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="vieux port"
@@ -284,10 +284,10 @@
               <figcaption>
                 <p>Vieux port</p>
               </figcaption>
-            </figure>
+            </figure> -->
           </li>
           <li class="fort">
-            <figure>
+            <!-- <figure>
               <img
                 src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                 alt="Fort de Pomègues"
@@ -295,10 +295,10 @@
               <figcaption>
                 <p>Fort de Pomègues</p>
               </figcaption>
-            </figure>
+            </figure> -->
           </li>
           <li class="iles">
-            <figure>
+            <!-- <figure>
               <img
                 src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                 alt="Iles du Frioul"
@@ -306,10 +306,10 @@
               <figcaption>
                 <p>Iles du Frioul</p>
               </figcaption>
-            </figure>
+            </figure> -->
           </li>
           <li class="calanques">
-            <figure>
+            <!-- <figure>
               <img
                 src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 alt="Parc National des Calanques"
@@ -317,10 +317,10 @@
               <figcaption>
                 <p>Parc National des Calanques</p>
               </figcaption>
-            </figure>
+            </figure> -->
           </li>
           <li class="notre-dame">
-            <figure>
+            <!-- <figure>
               <img
                 src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                 alt="Notre-Dame-de-la-Garde"
@@ -328,10 +328,10 @@
               <figcaption>
                 <p>Notre-Dame-de-la-Garde</p>
               </figcaption>
-            </figure>
+            </figure> -->
           </li>
           <li class="parc">
-            <figure>
+            <!-- <figure>
               <img
                 src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                 alt="Parc Longchamp"
@@ -339,7 +339,7 @@
               <figcaption>
                 <p>Parc Longchamp</p>
               </figcaption>
-            </figure>
+            </figure> -->
           </li>
         </ul>
       </section>
