:construction: css grid

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <h2>Activités à Marseille</h2>
         <ul class="activites-list">
           <li class="vieux-port">
-            <!-- <figure>
+            <figure>
               <img
                 src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="vieux port"
@@ -284,7 +284,7 @@
               <figcaption>
                 <p>Vieux port</p>
               </figcaption>
-            </figure> -->
+            </figure>
           </li>
           <li class="fort">
             <!-- <figure>
