:construction: :iphone: header

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         </nav>
       </header>
       <main class="content">
+        <nav class="nav-responsive">
+          <button class="hebergement-link-mobile">Hebergements</button>
+          <button class="activite-link-mobile">Activité</button>
+        </nav>
         <section class="hero">
           <h2 style="font-weight: 800">
             Trouvez votre hébergements pour des vacances de rêve
