--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <div class="container-page">
-      <header>
+      <header class="header-page">
         <img src="./images/logo/Reservia.svg" alt="Logo" />
         <nav class="link-header">
           <a class="hebergement-link">Hebergements</a>
@@ -32,10 +32,6 @@
         </nav>
       </header>
       <main class="content">
-        <nav class="nav-responsive">
-          <button class="hebergement-link-mobile">Hebergements</button>
-          <button class="activite-link-mobile">Activité</button>
-        </nav>
         <section class="hero">
           <h2 style="font-weight: 800">
             Trouvez votre hébergements pour des vacances de rêve
