--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               value="Marseille,France"
               class="input-text"
             /><input type="submit" value="Rechercher" class="button" />
+            <button class="responsive-button" type="submit"><i class="fa fa-magnifying-glass"></i></button></form>
           </form>
           <div class="filters">
             <h3>Filtres</h3>
